# Irrlicht

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Irrlicht.sln  prepare_release.bat  prepare_release.sh  prepare_release_locally.sh  run_watercolor.sh
Irrlicht/: CMakeLists.txt
Irrlicht/include/: IGUIElement.h  irrTypes.h
Irrlicht/sources/: CAnimatedMeshHalfLife.h  CAnimatedMeshMD2.cpp  CAnimatedMeshMD3.cpp  CAnimatedMeshMD3.h  CAnimatedMeshSceneNode.cpp  CAnimatedMeshSceneNode.h  CAttributes.h  CB3DMeshFileLoader.h  CBSPMeshFileLoader.cpp  CBSPMeshFileLoader.h  CBillboardSceneNode.cpp  CBlit.h  CBoneSceneNode.cpp  CCameraSceneNode.cpp  CCgMaterialRenderer.cpp  CColladaFileLoader.cpp  CColladaMeshWriter.cpp  CCubeSceneNode.cpp  CCubeSceneNode.h  CDMFLoader.h  CDefaultGUIElementFactory.h  CDummyTransformationSceneNode.cpp  CDummyTransformationSceneNode.h  CEmptySceneNode.cpp  CFileSystem.h  CGUIButton.h  CGUICheckBox.cpp  CGUIColorSelectDialog.cpp  CGUIColorSelectDialog.h  CGUIComboBox.h  CGUIContextMenu.cpp  CGUIEditBox.cpp  CGUIEditBox.h  CGUIEnvironment.cpp  CGUIFileOpenDialog.h  CGUIFont.h  CGUIImage.h  CGUIImageList.cpp  CGUIInOutFader.h  CGUIListBox.cpp  (+129 more)
Irrlicht/sources/MacOSX/: CIrrDeviceMacOSX.cpp  CIrrDeviceMacOSX.h  CIrrDeviceMacOSX.mm
Irrlicht/sources/aesGladman/: pwd2key.cpp
Irrlicht/sources/jpeglib/: jconfig.h  jmemmac.c
Irrlicht/sources/zlib/: gzguts.h
TEngineFramework/TAM/: CMakeLists.txt
TEngineFramework/TAM/Sources/: ISoundService.h  SoundService.cpp  SoundService.h  TAMFacade.cpp  TAMFacade.h
TEngineFramework/TAM/Sources/SoundSource/: SoundSource.cpp  SoundSource.h
TEngineFramework/TAM/VSProject/: TAM.vcxproj  TAM.vcxproj.filters  packages.config
TEngineFramework/TCore/: CMakeLists.txt
TEngineFramework/TCore/Sources/: TCoreFacade.cpp  TCoreFacade.h
TEngineFramework/TCore/Sources/Di/: DiContainer.h  IDiContainer.cpp  IDiContainer.h
TEngineFramework/TCore/Sources/FunctionsProcessing/: FunctionsProcessingManager.h  IFunctionsProcessingManager.h
TEngineFramework/TCore/VSProject/: TCore.vcxproj  TCore.vcxproj.filters
TEngineFramework/TNC/: CMakeLists.txt
TEngineFramework/TNC/Sources/: TNCFacade.cpp  TNCFacade.h
TEngineFramework/TNC/Sources/THttpClient/: THttpClient.cpp  THttpClient.h
TEngineFramework/TNC/Sources/TNCTypes/: TNCEvent.h
TEngineFramework/TNC/Sources/TWebSocket/: TWebSocket.cpp  TWebSocket.h
TEngineFramework/TNC/Sources/Utils/: TNCUtils.cpp  TNCUtils.h
TEngineFramework/TNC/Sources/WebSocket/Client/: IWebSocketClient.h  TWebSocketClient.cpp  TWebSocketClient.h  TWebSocketClientDecorator.cpp  TWebSocketClientDecorator.h
TEngineFramework/TNC/Sources/WebSocket/Server/: IWebSocketServer.h  TWebSocketServer.cpp  TWebSocketServer.h  TWebSocketServerDecorator.cpp  TWebSocketServerDecorator.h
TEngineFramework/TNC/VSProject/: TNC.vcxproj  TNC.vcxproj.filters
TEngineFramework/TUtils/: CMakeLists.txt
TEngineFramework/TUtils/Sources/: TUtils.h
TEngineFramework/TUtils/Sources/Mixins/: PatchableMixin.cpp  PatchableMixin.h  SingletonMixin.h
TEngineFramework/TUtils/Sources/Types/: Event.h
TEngineFramework/TUtils/Sources/Utils/: Filesystem.cpp  Filesystem.h  FilesystemUtils.cpp  Utils.cpp  Utils.h
TEngineFramework/TUtils/VSProject/: TUtils.vcxproj  TUtils.vcxproj.filters
TLauncher/: CMakeLists.txt
TLauncher/Sources/: EntryPoint.cpp  StartupHandler.cpp  StartupHandler.h
TLauncher/Sources/TEngineGameLogicApi/: IGame.h
TLauncher/VSProject/: TLauncher.vcxproj  TLauncher.vcxproj.filters  packages.config
Watercolor/Common/: CMakeLists.txt
Watercolor/Common/Sources/: CommonDependencyRegistrator.cpp  CommonDependencyRegistrator.h  CommonFacade.h
Watercolor/Common/Sources/Common/: CommonData.h  LanguageDependents.h
Watercolor/Common/Sources/Items/Graphic/: GizmoGraphicContext.cpp  GizmoGraphicContext.h  GraphicContext.cpp  GraphicContext.h
Watercolor/Common/Sources/Items/RichButtonGroupBox/: RichButtonGroupBox.cpp  RichButtonGroupBox.h
Watercolor/Common/Sources/Items/UIThreadFunctionsRunner/: UIThreadFunctionsRunner.cpp  UIThreadFunctionsRunner.h
Watercolor/Common/Sources/ProjectDataManager/: IProjectDataManager.h  ProjectDataManager.cpp  ProjectDataManager.h
Watercolor/Common/Sources/ProjectDataManager/InternalDerictoriesTypes/: InternalDerictoriesTypes.h
Watercolor/Common/Sources/ThreadTypes/: ThreadTypes.h
Watercolor/Common/Sources/Utils/: EventHandler.h  WatercolorUtils.cpp  WatercolorUtils.h
Watercolor/MainWindow/: CMakeLists.txt
Watercolor/MainWindow/Resources/Levels/: EmptyLevelTemplate.irr
Watercolor/MainWindow/Sources/: MainWindow.cpp  MainWindow.h
Watercolor/MainWindow/Sources/AboutDialog/: AboutDialog.cpp
Watercolor/MainWindow/Sources/Items/: MainMenu.cpp  MainMenu.h  MainWindowStatusBar.cpp  MainWindowStatusBar.h  ToolMenu.cpp  ToolMenu.h
Watercolor/MainWindow/Sources/Items/AboutDialog/: AboutDialog.cpp  AboutDialog.h
Watercolor/MainWindow/Sources/Items/ClientAreaPanel/: ClientAreaPanel.cpp  ClientAreaPanel.h
Watercolor/Plugins/GuiEditor/: CMakeLists.txt
Watercolor/Plugins/GuiEditor/Sources/: GameUIEditor.cpp  Plugin.cpp  Plugin.h
Watercolor/Plugins/GuiEditor/Sources/Utils/: LanguageDependents.h
Watercolor/Services/: CMakeLists.txt
Watercolor/Services/Sources/: RecentlyOpenedProjectsService.cpp  RecentlyOpenedProjectsService.h  ServicesFacade.cpp  ServicesFacade.h
Watercolor/Services/Sources/Controls/: ControlIdService.cpp  ControlIdService.h  IControlIdService.h
Watercolor/Services/Sources/Plugins/: IPluginService.h  PluginService.cpp  PluginService.h
Watercolor/Services/Sources/Plugins/Api/: IPlugin.h  PluginType.h
Watercolor/WelcomeWindow/: CMakeLists.txt
Watercolor/WelcomeWindow/Sources/: AppMain.cpp  AppMain.h  EntryPoint.cpp  WelcomeWindow.cpp  WelcomeWindow.h
Watercolor/WelcomeWindow/Sources/Items/: RecentlyLoadedProject.cpp  RecentlyLoadedProject.h  RecentlyLoadedProjectsList.cpp  RecentlyLoadedProjectsList.h
Watercolor/WelcomeWindow/Sources/Models/: RecentlyOpenedProjectModel.cpp  RecentlyOpenedProjectModel.h
(+396 files in other folders)
